# epstein-files-local-rag

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-chatbot.txt  run_chatbot.sh  run_processing.sh
docs/: DEVELOPMENT.md  OCR_GUIDE.md  QUICKSTART.md  README_CHATBOT.md
scripts/: __init__.py  filter_chunks.py  initialize.py  initialize_background.py  initialize_with_ocr.py  test_setup.py
src/: __init__.py  chatbot.py  document_processor.py  document_processor_ocr.py  llm.py  rag.py  vector_store.py
tools/: test_ocr_extraction.py
